Added background image

--- a/css/starter-template.css
+++ b/css/starter-template.css
@@ -5,3 +5,22 @@ body {
   padding: 40px 15px;
   text-align: center;
 }
+
+#background-section {
+    background: url(../images/screenshot.png) 100% 0 fixed;
+    height: auto; 
+    margin: 0 auto;
+    width: 100%;
+    position: relative;
+    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    padding: 400px 0;
+    background-size:cover;
+}
+#content-section {
+    height: auto; 
+    margin: 0 auto;
+    width: 100%;
+    position: relative;
+    box-shadow: 0 0 50px rgba(0,0,0,0.8);
+    padding: 50px 0;
+}
