Added all fields

--- a/polymer/bunnies.css
+++ b/polymer/bunnies.css
@@ -39,7 +39,6 @@ paper-button {
 #screenshot {
     height: 600px;
     width: 100%;
-
 }
 
 .screenshotCard {
@@ -66,6 +65,20 @@ body {
   width: 40%;
 }
 
-#download {
-  width: 45%;
+#contact {
+  width: 40%;
 }
+
+#download {
+  width: 40%;
+}
+
+#youtubeCard{
+  width: 40%;
+}
+
+.circle {
+	border-radius: 50px;
+	-webkit-border-radius: 50px;
+	-moz-border-radius: 50px;
+	}
