--- a/polymer/bunnies.css
+++ b/polymer/bunnies.css
@@ -19,6 +19,8 @@ paper_toolbar {
 
 #content .card  {
   padding:  2%;
+  padding-top: 20px;
+  padding-bottom: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
   margin-left: 30px;
