--- a/polymer/bunnies.css
+++ b/polymer/bunnies.css
@@ -64,19 +64,19 @@ body {
 }
 
 #intro {
-  width: 40%;
+  width: 650px;
 }
 
 #contact {
-  width: 40%;
+  width: 650px;
 }
 
 #download {
-  width: 40%;
+  width: 650px;
 }
 
 #youtubeCard{
-  width: 40%;
+  width: 650px;
 }
 
 .circle {
