--- a/polymer/bunnies.css
+++ b/polymer/bunnies.css
@@ -26,10 +26,19 @@ paper_toolbar {
   margin-left: 30px;
   margin-right:  30px;
   background: linear-gradient(#d1d1d5, #c0c0cf);
+  opacity: 0.8;
+  transition: opacity 400ms ease-in-out;
 }
+
+#content .card:hover{
+   opacity: 1;   
+}
+
 
 #screenshot  {
   width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 
