--- a/polymer/bunnies.css
+++ b/polymer/bunnies.css
@@ -2,19 +2,22 @@ paper-header-panel {
   height: 1700px;
   bottom: -6px;
   --paper-header-panel-shadow: {
-      height: 15px;
-      bottom: -6px;
-      box-shadow: inset 1px 5px 6px -3px rgba(0, 0, 0, 0.4);
+    height: 15px;
+    bottom: -6px;
+    box-shadow: inset 1px 5px 6px -3px rgba(0, 0, 0, 0.4);
   };
 
 }
 
-paper_toolbar {
-  color: rgb(255, 255, 255);
-  opacity: 0;
+#title {
+  color: white;
+  font-size: 30px;
 }
 
-#content {
+
+paper-button {
+  color: white;
+  background-color: #3949AB;
 }
 
 #content .card  {
@@ -25,13 +28,14 @@ paper_toolbar {
   margin-bottom: 20px;
   margin-left: 30px;
   margin-right:  30px;
-  background: linear-gradient(#d1d1d5, #c0c0cf);
+
   opacity: 0.8;
   transition: opacity 400ms ease-in-out;
+  background: linear-gradient(#8999cB, #5969CB;);
 }
 
 #content .card:hover{
-   opacity: 1;   
+  opacity: 1;
 }
 
 
@@ -42,34 +46,31 @@ paper_toolbar {
 }
 
 
-paper-button {
-      background-color: #3f51b5;
-      color: white;
-}
+
 
 #screenshot {
-    height: 600px;
-    width: 100%;
+  height: 600px;
+  width: 100%;
 }
 
 .screenshotCard {
-    width: 100%;
-    padding:  2%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 30px;
-    margin-right:  30px;
-    background: linear-gradient(#d1d1d5, #c0c0cf);
+  width: 100%;
+  padding:  2%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 30px;
+  margin-right:  30px;
+  background: linear-gradient(#8999cB, #5969CB;);
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 500;
   line-height: 1.1;
 }
 
 body {
-    font-family: arial,sans-serif;
+  font-family: arial,sans-serif;
 }
 
 #intro {
@@ -89,7 +90,7 @@ body {
 }
 
 .circle {
-	border-radius: 50px;
-	-webkit-border-radius: 50px;
-	-moz-border-radius: 50px;
-	}
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+}
